Fix fonts and spacing according to rotem notes (#343)
* fix fonts and spacing according to rotem notes

* fix style error

* fix style error

--- a/src/storybook/components/component-rules/component-rules.scss
+++ b/src/storybook/components/component-rules/component-rules.scss
@@ -3,7 +3,6 @@
 .monday-storybook-component-rules {
   display: flex;
   flex-direction: column;
-  margin-top: $spacing-between-section-items;
 
   &_pair {
     display: flex;
