--- a/src/storybook/stand-alone-documentaion/welcome/ability-description/ability-description.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/ability-description/ability-description.scss
@@ -20,7 +20,7 @@
   }
 
   &_content {
-    @include paragraph-text;
+    @include small-text;
     margin-bottom: $spacing-large;
   }
 }
