--- a/src/storybook/stand-alone-documentaion/welcome/welcome-header/welcome-header.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/welcome-header/welcome-header.scss
@@ -6,7 +6,7 @@
   height: 294px;
   display: flex;
   align-items: center;
-  @include theme-prop(background-color, primary-background-hover-color);
+  @include theme-prop(background-color, dark-background-color);
   min-width: 650px;
   padding-left: 40px;
 
